--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ td, th {
 	margin: 2em auto;
 }
 
-@media screen and (max-widht: 480px) {
+@media screen and (max-width: 480px) {
 	.caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
 		width: auto;
 	}
